$Id$
            
            [- Version 2.1.9 -]
2006-04-10: Added 'setter' to setter.lisp.  (setter <place>) returns
            a function of two args.  (>< (setter p) v fcn) is
            the same as (!= p (>< fcn v *-*)).  The two functions
            <-this-val and ^-this-val are defined to be used with
            setter; they ignore the second arg.

            [- Version 2.1.8 2006/01/22 15:38:50 airfoyle Exp -]
2006-01-13: Defined (>< e -args-) as synonym for (funcall e -args-)

            [- Version 2.1.6 -]
2006-01-10: Define '_' as a symbol macro that expands to 'nil'.

            [- Version 2.1.5 2005/12/30 19:16:24 airfoyle Exp -]
2005-12-30: When installing YTools, if YTFM is not yet installed, user
            is queried whether it should be installed, but is no
            longer asked the confusing question about whether YTFM
            should be loaded; the load now happens willy-nilly.
            Post-file-transduction hooks are now run in reverse chrono
            order. 
            Replaced occurrences of (set sym val) with (!=
            (Symbol-value sym) val) in tracearound to make CLISP
            happy. 

            [- Version 2.1.4 -]
2005-12-28: Allow '_' in (repeat :for ((_ = l :to h)) ...).

            [- Version 2.1.3 2005/12/26 15:33:18 airfoyle Exp -]
2005-12-26: Add 'sym-val' to debug.lisp.

            [- Version 2.1.2 2005/12/26 15:21:44 airfoyle Exp -]
2005-12-25: Merge chunk-based YTools into main line!
            
            [- Version 2.0.61 -]
2005-12-24: Allow '+' or '-' as responses to question about whether a
            file should be loaded after being compiled.  Fix paren
            error in 'track-extra-vals' (multilet.lisp).  To make
            "fcompl -f" work correctly for ytools module, added every
            component of the module to the definition in module.lisp.

            [- Version 2.0.59 2005/12/23 05:59:18 airfoyle Exp]
2005-12-22: Made 'fcompl' work with modules --- sort of.
