@@ -1,6 +1,11 @@
 $Id$
             
-            [- Version 2.1.9 -]
+            [- Version 2.1.10 -]
+2006-04-14: Add <expel!= as synonym for 'off-list'; allowed atom '>!='
+            to appear as meaningless flag in 'on-list'.  (Yes, I'm
+            crazy.) 
+
+            [- Version 2.1.9 2006/04/11 03:35:52 airfoyle Exp -]
 2006-04-10: Added 'setter' to setter.lisp.  (setter <place>) returns
             a function of two args.  (>< (setter p) v fcn) is
             the same as (!= p (>< fcn v *-*)).  The two functions
